Wed Jan  7 12:38:42 2004  Brian Mendel  <brian.r.mendel@boeing.com>

        * orbsvcs/orbsvcs/Event/rtkokyu_event_export.h:

          Added check for TAO_AS_STATIC_LIBS for setting the export flags for 
          proper building of static libraries.

Wed Jan  7 12:16:15 2004  Chad Elliott  <elliott_c@ociweb.com>

        * tao/tao.mpc:

          Added taodefaults to the inheritance list to get the default
          values that used to be coming from the tao_output base project.

Wed Jan  7 11:43:14 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/tao.mpc:

          Added Arg_Traits_T.h so it will get included in MSVC project
          files, even though it has no corresponding .cpp file.

Wed Jan  7 10:50:22 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/ast/ast_interface.cpp:

          Fixed internal handling of an AST node's version string, to avoid
          string compare errors with a null string, and to correctly
          diagnose errors resulting from an attempt to reset the version
          after it has been set by '#pragma version' or by 'typeid'.

Wed Jan  7 15:35:43 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Smart_Proxies/Policy/Smart_Proxies_Policy.mpc:
          Client needs portableserver

Wed Jan  7 13:00:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Cubit/TAO/MT_Cubit/MT_Cubit.mpc:
          When usign gnuace generate LDLIBS += $(MATHLIB) at the place of
          the local marker. This test uses sqrt and some Unix versions
          then need to link their mathlib.

        * tests/Smart_Proxies/Policy/Smart_Proxies_Policy.mpc:
          Use taoserver and taoclient as base project so that exenames are
          set to the names the run_test.pl expects

Tue Jan  6 20:43:53 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/ast/ast_interface.cpp: